// Vitest Snapshot v1

exports[`should return project coya diagram: /cases/01_simple 1`] = `
{
  "blocks": {
    "a_7": {
      "from": "b_2",
      "label": "",
      "to": "b_1",
      "type": "line",
    },
    "a_8": {
      "from": "b_3",
      "label": "",
      "to": "b_2",
      "type": "line",
    },
    "b_1": undefined,
    "b_2": undefined,
    "b_3": undefined,
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_1": {
        "css": {
          "get": "_func",
        },
      },
      "b_2": {
        "css": {
          "get": "_func",
        },
      },
      "b_3": {
        "css": {
          "get": "_func",
        },
      },
    },
    "layout": {
      "type": "Dagre",
    },
  },
}
`;

exports[`should return project coya diagram: /cases/02_function 1`] = `
{
  "blocks": {
    "a_10": {
      "from": "b_47",
      "label": "",
      "to": "b_46",
      "type": "line",
    },
    "a_9": {
      "from": "b_47",
      "label": "",
      "to": "b_45",
      "type": "line",
    },
    "b_45": undefined,
    "b_46": undefined,
    "b_47": undefined,
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_45": {
        "css": {
          "get": "_func",
        },
      },
      "b_46": {
        "css": {
          "get": "_func",
        },
      },
      "b_47": {
        "css": {
          "get": "_func",
        },
      },
    },
    "layout": {
      "type": "Dagre",
    },
  },
}
`;

exports[`should return project coya diagram: /cases/03_function_relation 1`] = `
{
  "blocks": {
    "a_11": {
      "from": "b_9",
      "label": "",
      "to": "b_4",
      "type": "line",
    },
    "a_12": {
      "from": "b_9",
      "label": "",
      "to": "b_5",
      "type": "line",
    },
    "a_13": {
      "from": "b_48",
      "label": "",
      "to": "b_9",
      "type": "line",
    },
    "a_14": {
      "from": "b_6",
      "label": "",
      "to": "b_49",
      "type": "line",
    },
    "a_15": {
      "from": "b_7",
      "label": "",
      "to": "b_49",
      "type": "line",
    },
    "a_16": {
      "from": "b_8",
      "label": "",
      "to": "b_49",
      "type": "line",
    },
    "a_17": {
      "from": "b_8",
      "label": "",
      "to": "b_7",
      "type": "line",
    },
    "a_18": {
      "from": "b_48",
      "label": "",
      "to": "b_6",
      "type": "line",
    },
    "a_19": {
      "from": "b_9",
      "label": "",
      "to": "b_49",
      "type": "line",
    },
    "a_20": {
      "from": "b_48",
      "label": "",
      "to": "b_7",
      "type": "line",
    },
    "a_21": {
      "from": "b_48",
      "label": "",
      "to": "b_8",
      "type": "line",
    },
    "a_22": {
      "from": "b_9",
      "label": "",
      "to": "b_7",
      "type": "line",
    },
    "b_4": undefined,
    "b_48": undefined,
    "b_49": undefined,
    "b_5": undefined,
    "b_6": undefined,
    "b_7": undefined,
    "b_8": undefined,
    "b_9": undefined,
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_4": {
        "css": {
          "get": "_func",
        },
      },
      "b_48": {
        "css": {
          "get": "_func",
        },
      },
      "b_49": {
        "css": {
          "get": "_func",
        },
      },
      "b_5": {
        "css": {
          "get": "_func",
        },
      },
      "b_6": {
        "css": {
          "get": "_func",
        },
      },
      "b_7": {
        "css": {
          "get": "_func",
        },
      },
      "b_8": {
        "css": {
          "get": "_func",
        },
      },
      "b_9": {
        "css": {
          "get": "_func",
        },
      },
    },
    "layout": {
      "type": "Dagre",
    },
  },
}
`;

exports[`should return project coya diagram: /cases/04_vue 1`] = `
{
  "blocks": {
    "a_0": {
      "from": "b_16",
      "label": "",
      "to": "b_20",
      "type": "line",
    },
    "a_1": {
      "from": "b_16",
      "label": "",
      "to": "b_17",
      "type": "line",
    },
    "a_2": {
      "from": "b_25",
      "label": "",
      "to": "b_30",
      "type": "line",
    },
    "a_23": {
      "from": "b_25",
      "label": "",
      "to": "b_31",
      "type": "line",
    },
    "a_24": {
      "from": "b_25",
      "label": "",
      "to": "b_32",
      "type": "line",
    },
    "a_25": {
      "from": "b_26",
      "label": "",
      "to": "b_33",
      "type": "line",
    },
    "a_26": {
      "from": "b_26",
      "label": "",
      "to": "b_27",
      "type": "line",
    },
    "a_27": {
      "from": "b_26",
      "label": "",
      "to": "b_0",
      "type": "line",
    },
    "a_28": {
      "from": "b_26",
      "label": "",
      "to": "b_28",
      "type": "line",
    },
    "a_29": {
      "from": "b_16",
      "label": "",
      "to": "b_25",
      "type": "line",
    },
    "a_30": {
      "from": "b_16",
      "label": "",
      "to": "b_26",
      "type": "line",
    },
    "a_31": {
      "from": "b_17",
      "label": "",
      "to": "b_27",
      "type": "line",
    },
    "a_32": {
      "from": "b_18",
      "label": "",
      "to": "b_0",
      "type": "line",
    },
    "a_33": {
      "from": "b_18",
      "label": "",
      "to": "b_28",
      "type": "line",
    },
    "a_34": {
      "from": "b_19",
      "label": "",
      "to": "b_16",
      "type": "line",
    },
    "a_35": {
      "from": "b_19",
      "label": "",
      "to": "b_29",
      "type": "line",
    },
    "b_0": undefined,
    "b_16": undefined,
    "b_17": undefined,
    "b_18": undefined,
    "b_19": undefined,
    "b_20": undefined,
    "b_25": undefined,
    "b_26": undefined,
    "b_27": undefined,
    "b_28": undefined,
    "b_29": undefined,
    "b_30": undefined,
    "b_31": undefined,
    "b_32": undefined,
    "b_33": undefined,
  },
  "name": "coya-ts-analyzer",
  "phases": [],
  "style": {
    "blocks": {
      "_": {
        "css": {
          "text": {
            "fontSize": "auto",
          },
        },
      },
      "_file": {
        "css": {
          "color": "#ffffffff",
          "fill": "#008781ff",
          "fillStyle": "solid",
        },
      },
      "_folder": {
        "css": {
          "color": "#ffffffff",
          "fill": "#f67c01ff",
          "fillStyle": "solid",
        },
      },
      "_func": {
        "css": {
          "color": "#ffffffff",
          "fill": "#2097f3ff",
          "fillStyle": "solid",
        },
      },
      "b_0": {
        "css": {
          "get": "_func",
        },
      },
      "b_16": {
        "css": {
          "get": "_func",
        },
      },
      "b_17": {
        "css": {
          "get": "_func",
        },
      },
      "b_18": {
        "css": {
          "get": "_func",
        },
      },
      "b_19": {
        "css": {
          "get": "_func",
        },
      },
      "b_20": {
        "css": {
          "get": "_func",
        },
      },
      "b_25": {
        "css": {
          "get": "_func",
        },
      },
      "b_26": {
        "css": {
          "get": "_func",
        },
      },
      "b_27": {
        "css": {
          "get": "_func",
        },
      },
      "b_28": {
        "css": {
          "get": "_func",
        },
      },
      "b_29": {
        "css": {
          "get": "_func",
        },
      },
      "b_30": {
        "css": {
          "get": "_func",
        },
      },
      "b_31": {
        "css": {
          "get": "_func",
        },
      },
      "b_32": {
        "css": {
          "get": "_func",
        },
      },
      "b_33": {
        "css": {
          "get": "_func",
        },
      },
    },
    "layout": {
      "type": "Dagre",
    },
  },
}
`;
